# CodeFurnace

./: .gitignore  ChangeLogs.md  LICENSE  README.md  requirements.txt
Src/: .env  cmrconsole.py
Src/Core/: AIHandler.py  BaseShell.py  CodeFurnace.py  HistoryManager.py  ModuleLoader.py  Printer.py  __init__.py
Src/Lib/: Debugger.py  Template.py
Src/Server/Exploits/NoticedCloud/: NCEXP.py
Src/Server/Exploits/NoticedCloud/.NCEXP/: Template.py  docker.dockerfile  imports.py
Src/Server/Payloads/Linux/NoticedCloud/: reverse_tcp.py
Src/Server/Payloads/Windows/NoticedCloud/: reverse_tcp.py
src/: cert_gen.py
src/Client/Payloads/Rust/reverse_shell/: Cargo.toml
src/Client/Payloads/Rust/reverse_shell/src/: main.rs
src/Client/Payloads/Windows/NoticedCloud/: reverse_tcp.py
src/Core/: AsyncServer.py  CodeFurnace.py  GenericAdapter.py  IModule.py  IPayload.py  PayloadAdapter.py  SessionManager.py
src/Lib/: Template.py
src/Server/Exploits/Test/: dummy_exploit.py  test_polyglot.json
src/Server/Payloads/Rust/reverse_shell/: payload.json
